# mf_data_locality

./: CMakeLists.txt  README.md
.github/workflows/: indentation.yml  tests.yml
benchmark_basic/: bench.cc  test.cc  test.mpirun=1.output  test.mpirun=4.output
benchmark_merged/: bench.cc  test.cc  test.mpirun=1.output  test.mpirun=4.output
benchmark_pipelined/: CMakeLists.txt  bench.cc  test.cc  test.mpirun=1.output  test.mpirun=4.output
benchmark_pipelined_merged/: bench.cc
benchmark_precond/: CMakeLists.txt  bench.cc  test.cc  test.mpirun=1.output  test.mpirun=4.output
benchmark_precond_comm/: bench.cc  test.cc
benchmark_precond_merged/: CMakeLists.txt  bench.cc  test.cc
benchmark_precond_pre_vmult_post/: bench.cc  test.cc
benchmark_range/: CMakeLists.txt  bench.cc
benchmark_s_step/: bench.cc  test.cc  test.mpirun=1.output  test.mpirun=4.output
cmake/: macro_pick_up_benchmark.cmake
common_code/: benchmark.h  benchmark_test.h  diagonal_matrix_blocked.h  poisson_operator.h  solver_cg.h  solver_cg_comm.h  solver_cg_optimized.h  solver_cg_pipelined.h  solver_cg_pipelined_merged.h  solver_cg_s_step.h  timer.h
scripts/: likwid_parser.py
